--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
         "laracasts/flash": "^1.3",
         "illuminate/html": "^5.0",
         "maatwebsite/excel": "^2.0",
-        "dompdf/dompdf": "^0.6.1",
-        "h4cc/wkhtmltopdf-i386": "0.12.x",
-        "h4cc/wkhtmltoimage-i386": "0.12.x"
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
