--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "illuminate/html": "^5.0",
         "maatwebsite/excel": "^2.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "h4cc/wkhtmltoimage-amd64": "0.12.x"
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "barryvdh/laravel-snappy": "0.2.x@dev",
+        "venturecraft/revisionable": "^1.23"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
