--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.kiicks.com.sg
-MAIL_PORT=587
+MAIL_HOST=mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_USERNAME=custcare@kiicks.com.sg
-MAIL_PASSWORD=custcare2015
