--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=leehongjie91@gmail.com
-MAIL_PASSWORD=billionaire91
-MAIL_ENCRYPTION=tls
+MAIL_HOST=mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 
