--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "barryvdh/laravel-snappy": "0.2.x@dev",
-        "venturecraft/revisionable": "^1.23"
+        "venturecraft/revisionable": "^1.23",
+        "pda/pheanstalk": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
