--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "barryvdh/laravel-snappy": "0.2.x@dev",
         "venturecraft/revisionable": "^1.23",
-        "pda/pheanstalk": "^3.1"
+        "pda/pheanstalk": "^3.1",
+        "baum/baum": "~1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
