--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_KEY=RCsrprOI6IPeJeZ2EPtUe7e7ItZwMwM4
 
 DB_HOST=127.0.0.1
 DB_DATABASE=happyice
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
