--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=RCsrprOI6IPeJeZ2EPtUe7e7ItZwMwM4
 
 DB_HOST=127.0.0.1
-DB_DATABASE=happyice
+DB_DATABASE=newmark4
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=''
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
