--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "barryvdh/laravel-snappy": "0.2.x@dev",
         "venturecraft/revisionable": "^1.23",
         "pda/pheanstalk": "^3.1",
-        "baum/baum": "~1.1"
+        "baum/baum": "~1.1",
+        "barryvdh/laravel-debugbar": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
