--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "newmark2",
   "dependencies": {
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
-    "angular-sanitize": "~1.4.8"
+    "angular-sanitize": "~1.4.8",
+    "angularjs-datepicker": "^2.1.6",
+    "angular-datepicker": "^2.0.3"
   }
 }
