detailed rpt account cust detail

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_ENV=production
+APP_ENV=local
 APP_DEBUG=true
 APP_KEY=RCsrprOI6IPeJeZ2EPtUe7e7ItZwMwM4
 
 DB_HOST=127.0.0.1
-DB_DATABASE=newmark4
+DB_DATABASE=happyice
 DB_USERNAME=root
 DB_PASSWORD=''
 
