--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "venturecraft/revisionable": "^1.23",
         "pda/pheanstalk": "^3.1",
         "baum/baum": "~1.1",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "msurguy/honeypot": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
