--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,8 @@
     "angular-sanitize": "~1.4.8",
     "angularjs-datepicker": "^2.1.6",
     "angular-datepicker": "^2.0.3"
+  },
+  "resolutions": {
+    "angular": ">=1.2.18"
   }
 }
