--- a/resources/assets/bower/eonasdan-bootstrap-datetimepicker/package.json
+++ b/resources/assets/bower/eonasdan-bootstrap-datetimepicker/package.json
@@ -7,13 +7,13 @@
   },
   "peerDependencies": {
     "bootstrap": "^3.3",
-    "jquery": "^1.8.3 || ^2.0",
+    "jquery": "^1.8.3 || ^2.0 || ^3.0",
     "moment": "^2.10",
     "moment-timezone": "^0.4.0"
   },
   "dependencies": {
     "bootstrap": "^3.3",
-    "jquery": "^1.8.3 || ^2.0",
+    "jquery": "^1.8.3 || ^2.0 || ^3.0",
     "moment": "^2.10",
     "moment-timezone": "^0.4.0"
   },
@@ -47,5 +47,5 @@
     "type": "git",
     "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
   },
-  "version": "4.17.45"
+  "version": "4.17.47"
 }
