--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=beanstalkd
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=msv24-gibil.mschosting.com
 MAIL_PORT=465
 MAIL_USERNAME=system@happyice.com.sg
