2 decimals on invoice

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^3.0.0"
