--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "pda/pheanstalk": "^3.1",
         "baum/baum": "~1.1",
         "barryvdh/laravel-debugbar": "^2.2",
-        "msurguy/honeypot": "^1.0"
+        "msurguy/honeypot": "^1.0",
+        "laravel/socialite": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
