hd booked invoice id

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=RCsrprOI6IPeJeZ2EPtUe7e7ItZwMwM4
 
 DB_HOST=127.0.0.1
-DB_DATABASE=happyice
+DB_DATABASE=happyicesg
 DB_USERNAME=root
 DB_PASSWORD=''
 
