--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "msurguy/honeypot": "^1.0",
         "laravel/socialite": "^2.0",
-        "chrisbjr/api-guard": "3.*"
+        "chrisbjr/api-guard": "3.*",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
