--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -20,7 +23,8 @@
         "msurguy/honeypot": "^1.0",
         "laravel/socialite": "^2.0",
         "chrisbjr/api-guard": "3.*",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "doctrine/dbal": "^2.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -35,8 +39,7 @@
         "classmap": [
             "database"
         ],
-        "files": [
-        ],
+        "files": [],
         "psr-4": {
             "App\\": "app/"
         }
