--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "laravel/socialite": "^2.0",
         "chrisbjr/api-guard": "3.*",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "doctrine/dbal": "^2.10"
+        "doctrine/dbal": "^2.10",
+        "intervention/image": "^2.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
