--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "chrisbjr/api-guard": "3.*",
         "league/flysystem-aws-s3-v3": "^1.0",
         "doctrine/dbal": "^2.10",
-        "intervention/image": "^2.7"
+        "intervention/image": "^2.7",
+        "maddhatter/laravel-fullcalendar": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
