--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "doctrine/dbal": "^2.10",
         "intervention/image": "^2.7",
-        "maddhatter/laravel-fullcalendar": "^1.3"
+        "maddhatter/laravel-fullcalendar": "^1.3",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
